--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,1 +1,21 @@
-package conf
+appname = webmonitor
+httpport = 8060
+runmode = dev
+
+##########################   elastic  #####################################
+#elasticsearch url地址
+elastic.url=http://192.168.85.211:9200
+
+#elasticsearch探针开关
+elastic.sniff=false
+
+#索引名称
+elastic.indexname=weberr
+
+##########################   log  #####################################
+#log.level=1
+
+#文件路径
+#filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+#filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
+filelog.logpath=./data/access.log
