--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,7 +4,14 @@ runmode = dev
 
 ##########################   elastic  #####################################
 #elasticsearch url地址
+[dev]
 elastic.url=http://192.168.85.211:9200
+[test]
+elastic.url=http://192.168.85.211:9200
+[prod]
+elastic.url=http://192.168.85.211:9200
+[default]
+
 
 #elasticsearch探针开关
 elastic.sniff=false
@@ -16,6 +23,10 @@ elastic.indexname=weberr
 #log.level=1
 
 #文件路径
-#filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
-#filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
-filelog.logpath=./data/access.log
+[dev]
+filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
+[test]
+filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+[prod]
+filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+[default]
