--- a/conf/app.conf
+++ b/conf/app.conf
@@ -24,9 +24,9 @@ elastic.indexname=weberr
 
 #文件路径
 [dev]
-filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
+filelog.logpath=./data/access.log
 [test]
-filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
 [prod]
 filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [default]
