--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,6 +2,18 @@ appname = webmonitor
 httpport = 8060
 runmode = dev
 
+##########################   log源  #####################################
+#log.level=1
+
+#文件路径
+[dev]
+filelog.logpath=./data/access.log
+[test]
+filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
+[prod]
+filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+[default]
+
 ##########################   elastic  #####################################
 #elasticsearch url地址
 [dev]
@@ -19,14 +31,5 @@ elastic.sniff=false
 #索引名称
 elastic.indexname=weberr
 
-##########################   log  #####################################
-#log.level=1
-
-#文件路径
-[dev]
-filelog.logpath=./data/access.log
-[test]
-filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
-[prod]
-filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
-[default]
+##########################   kafka  #####################################
+kafka.addrs=["hank1:9092", "hank2:9092", "hank3:9092"]
