--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,7 +7,7 @@ runmode = dev
 
 #文件路径
 [dev]
-filelog.logpath=./data/access.log
+filelog.logpath=./data/st.dailaim.com_access.log
 [test]
 filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
 [prod]
@@ -32,4 +32,4 @@ elastic.sniff=false
 elastic.indexname=weberr
 
 ##########################   kafka  #####################################
-kafka.addrs=["hank1:9092", "hank2:9092", "hank3:9092"]
+kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
