--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,7 +9,7 @@ runmode = dev
 [dev]
 filelog.logpath=./data/st.dailaim.com_access.log
 [test]
-filelog.logpath=E:/phpstudy_pro/Extensions/Nginx1.15.11/logs/access.log
+filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [prod]
 filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [default]
@@ -32,4 +32,10 @@ elastic.sniff=false
 elastic.indexname=weberr
 
 ##########################   kafka  #####################################
+[dev]
 kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
+[test]
+kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
+[prod]
+kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
+[default]
