--- a/conf/app.conf
+++ b/conf/app.conf
@@ -33,9 +33,9 @@ elastic.indexname=weberr
 
 ##########################   kafka  #####################################
 [dev]
-kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
+kafka.addrs=["hank1:9092"]
 [test]
 kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
 [prod]
-kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
+kafka.addrs=["127.0.0.1:9092"]
 [default]
