--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,7 +7,7 @@ runmode = dev
 
 #文件路径
 [dev]
-filelog.logpath=./data/st.dailaim.com_access.log
+filelog.logpath=./data/st.yunlaimi.com_access.log
 [test]
 filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [prod]
@@ -39,3 +39,5 @@ kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
 [prod]
 kafka.addrs=["127.0.0.1:9092"]
 [default]
+
+kafka.partition=0
