add file offset

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,13 +5,24 @@ runmode = dev
 ##########################   log源  #####################################
 #log.level=1
 
+
+##########################   (1)File源  #####################################
+
 #文件路径
 [dev]
-filelog.logpath=./data/st.yunlaimi.com_access.log
+filelog.logpath=./data/st.dailaim.com_access.log
 [test]
 filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [prod]
 filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
+[default]
+
+[dev]
+filelog.dir="./data/"
+[test]
+filelog.dir="./data/"
+[prod]
+filelog.dir="./data/"
 [default]
 
 ##########################   elastic  #####################################
@@ -32,6 +43,9 @@ elastic.sniff=false
 elastic.indexname=weberr
 
 ##########################   kafka  #####################################
+#读取指定分区
+kafka.partition=0
+
 [dev]
 kafka.addrs=["hank1:9092"]
 [test]
@@ -39,5 +53,3 @@ kafka.addrs=["hank1:9092","hank2:9092","hank3:9092"]
 [prod]
 kafka.addrs=["127.0.0.1:9092"]
 [default]
-
-kafka.partition=0
