--- a/conf/app.conf
+++ b/conf/app.conf
@@ -20,7 +20,7 @@ filelog.logpath=/data/logs/nginx/st.yunlaimi.com_access.log
 [dev]
 filelog.dir="./data/"
 [test]
-filelog.dir="./data/"
+filelog.dir="/tmp/logagent/"
 [prod]
 filelog.dir="./data/"
 [default]
