--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,7 +22,7 @@ filelog.dir="./data/"
 [test]
 filelog.dir="/tmp/logagent/"
 [prod]
-filelog.dir="./data/"
+filelog.dir="/tmp/logagent/"
 [default]
 
 ##########################   elastic  #####################################
